# numcxx

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  numcxx.h
.github/workflows/: ci.yml
tests/: CMakeLists.txt  test_blas.cpp  test_compute_strides.cpp  test_ndarray_cstor.cpp  test_slice.cpp  test_utilities.cpp  test_utilities.h
